Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1571

Crash in axiom_node_get_data_element() on NULL pointer parameter

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.0
    • 1.7.0
    • None

    Description

      axiom_node_get_data_element() does not inspect its parameter and can cause crash if the parameter is NULL.
      I observed a crash when this fn is called from axis2_module_builder_populate_module(), where axis2_desc_builder_build_om() returns module_node (which can be NULL) and this module_node is passed to axiom_node_get_data_element().

      Attachments

        Activity

          People

            Unassigned Unassigned
            mehturt mehturt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: