Add null check in axis2_module_builder_populate_module

JIRA: AXIS2C-1571